--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
     implementation 'com.zolad:zoominimageview:1.0.0'
-
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
 }
